# ProjetProgS4

./: CMakeLists.txt  CompteRendu.tex  Doxyfile  Makefile  Rapport Bug.txt  Rapport.doc  ReadMe.txt  afficher.c  afficher.h  biblio.bib  doc.sh  grid.c  grid.h  main.c  test.c
include/: Keybord.h  afficher.h  grid.h  keyboard.h  strategy.h
latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  grid_8h.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  strategy_8h.tex  structgame.tex  structgrid__s.tex  structstrategy__s.tex  structvars__draw.tex
src/: 2048-gui.c  CMakeLists.txt  Keybord.c  StrategyGrap.c  afficher.c  grid.c  keyboard.c  main.c  strategy.c  strategyEfficient.c  strategyFast.c  strategyLib.c  stratmain.c  test.c
